# shortame

./: .env.example  .gitignore  README.md  app.dockerfile  create-table.dockerfile  create_dynamodb_locally.py  docker-compose.yml  example.secrets.toml  key-generator.dockerfile  key_generator.py  pyproject.toml  settings.toml
shortame/: app.py  config.py  key_generation.py
shortame/adapters/: dynamodb_adapter.py  redis_adapter.py
shortame/domain/: model.py
shortame/services/: key_generation_services.py  url_services.py
tests/: conftest.py
tests/unit/: test_domain_model.py  test_dynamodb_adapter.py  test_key_generation_service.py  test_redis_adapter.py  test_url_service.py
