[tool.poetry]
name = "shortame"
version = "0.1.0"
description = "A (not so) simple url shortener."
authors = ["Matheus Lino <matheus@mrlino.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.1.0"
black = "^23.9.1"
isort = "^5.12.0"
boto3 = "^1.28.46"
dynaconf = "^3.2.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
